# PathTracer

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  PathTracer.cpp  README.md
src/: Camera.cpp  Camera.h  Colour.cpp  Colour.h  Config.h  Hittable.h  Main.cpp  PathTracer.cpp  Ray.cpp  Ray.h  Sphere.cpp  Utils.cpp  Utils.h  Vec3.cpp  Vec3.h  World.cpp  World.h
src/data_structures/: SphereBVH.cpp  SphereBVH.h
src/entities/: Hittable.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Vec3.h  World.cpp  World.h
src/materials/: Dielectric.h  Lambertian.h  Material.h  Metal.h  Scatter.cpp  Scatter.h
src/renderer/: Camera.cpp  Camera.h  Colour.cpp  Colour.h  PixelWriter.h  PpmPixelWriter.cpp  PpmPixelWriter.h  PpmWriter.cpp  PpmWriter.h  Renderer.cpp  Renderer.h  Tile.h  WindowController.cpp  WindowController.h
